Novas atualizações 1.7